[package]
name = "radiolink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt-rtt = "0.4.0"
defmt = "0.3.5"
heapless = "0.8"
nrf51-hal = "0.16"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0", features = ["thumbv6-backend"] }

[profile.release]
debug = 2
